k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker
  namespace: expense-tracker
spec:
  type: NodePort
  selector:
    app: expense-tracker
  ports:
    - name: http
      port: 8501
      targetPort: 8501
      nodePort: 30501
