k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker
  namespace: expense-tracker
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker
                port:
                  number: 8501
    - host: expense.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker
                port:
                  number: 8501
